crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__class_self_and_super-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: cannot access `super` outside of class method
[34m>[0m code:2
[34m|[0m 
[34m|[0m   print [31;4msuper[0m
[34m|[0m 


