crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__class_stmt-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: expected `pass`
[34m>[0m code:1
[34m|[0m 
[34m|[0m class T: [31;4mfn[0m(v): pass
[34m|[0m 


