crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__class_stmt-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: fields may not appear after methods
[34m>[0m code:3
[34m|[0m 
[34m|[0m   [31;4ma[0m = b
[34m|[0m 


