crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__ctrl_stmt-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: continue outside of loop
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4mcontinue[0m
[34m|[0m 


