crates/syntax/src/parser/snapshots/mu_syntax__parser__tests__ctrl_stmt-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[31merror[0m: break outside of loop
[34m>[0m code:1
[34m|[0m 
[34m|[0m [31;4mbreak[0m
[34m|[0m 


